## [212.0.0] - 2026-02-07
### Added
- 接入Tunehub实现音乐播放
- 网络直播支持观影室同步
- 详情图片点击可预览
- oidc登录图标自动识别多平台

### Changed
- 获取用户站长无信息时返回默认值兜底
- 继续观看使用渐进式加载模式
- openlist根路径主动移除bom防止获取根目录失效
- webgpu缓冲区大小调整
- 设备管理可识别OrionTv

### Fixed
- 修复与upstash合并数据源时丢失的用户缓存信息
- 修复登录页面不处理error参数
- 修复safari视频切换集数无法清理旧视频
- 修复部分tmdb接口在cloudflare下无法使用

## [211.0.0] - 2026-02-01
### Added
- cloudflare部署增加d1支持
- 电视直播支持flv播放
- 登录注册页面输入框增加图标

### Changed
- 豆瓣预告片改为前端获取
- 豆瓣预告片可播放声音
- 轮播图缓存采用乐观更新策略
- 管理面板无权限时显示错误提示

## [210.2.0] - 2026-01-29
### Added
- 外部播放器增加app打开
- 新增tvbox屏蔽源配置
- 新增视频源权重功能

### Changed
- 设备管理当前设备置顶且显示黄色边框
- live分片代理移除content-length发送

### Fixed
- 修复tmdbkey错误和未登录时获取外部观影室密钥无限重定向

## [210.1.3] - 2026-01-28
### Fixed
- 修复跳转登录不登出

## [210.1.2] - 2026-01-27
### Fixed
- 修复刷新token失效无限重定向

## [210.1.1] - 2026-01-27
### Fixed
- 修复token过期重定向无法续期的问题

## [210.1.0] - 2026-01-27
### Added
- 增加直链播放
- 直播兼容txt格式

### Changed
- 首页轮播图和继续观看可隐藏
- 刷新token改为前端进行防止redis数据库方式报错

## [210.0.0] - 2026-01-25
### Added
- 新增网络直播功能
- 动漫磁力搜索增加蜜柑
- 动漫磁力搜索增加动漫花园
- pansou增加关键词过滤
- cloudflare workers部署支持

### Changed
- 去广告增强
- 登录验证机制改为Token+Refresh Token形式
- 移除旧版用户操作残留

### Fixed
- 修复缓存弹幕限制后不显示原始数量
- 修复测速缓存导致的错误测速数据
- 修复videocard，2000年只显示0年

## [209.1.0] - 2026-01-21
### Added
- 增加禁用自动匹配弹幕
- 增加弹幕上限设置
- 增加禁用弹幕热力图开关

### Changed
- 恢复无数据库支持
- 反爬增强

### Fixed
- 修复订阅去广告开关不正确修改链接问题

## [209.0.0] - 2026-01-18
### Added
- 新增收藏更新邮件发送
- 新增测速超时设置
- tmdb详情支持查看季度信息，集数信息
- tmdb支持设置反代
- tmdb图片支持自定义设置url
- 豆瓣图片增加百度图片代理

### Changed
- 统一upstash和redis数据层
- 优化docker镜像大小
- Cloudflare Turnstile开启前检测sitekey和Secretkey不能为空
- 豆瓣反爬增强
- 竖向videocard的source name调整到海报右下角
- 取消小雅获取剧集强制刷新
- 本地设置选项卡增加图标

### Fixed
- 修复详情不应用豆瓣图片策略

## [208.0.0] - 2026-01-16
### Added
- ai问片增加非流式响应
- 新增下集弹幕预加载
- openlist和小雅增加禁用预览方式播放
- 管理配置增加主动重载
- emby增加排序功能
- 播放页面标题自动跟随影片标题
- emby数据增加导入导出

### Changed
- 小雅现在会自动刷新播放链接
- 缓冲策略从下拉框改为滑块
- openlist扫描前增加tmdbkey配置检测
- 优化firefox下的弹幕热力图
- 小雅获取剧集时刷新文件夹

### Fixed
- 修复redis方式数据导入报错
- 修复小雅不过滤空url


## [207.0.0] - 2026-01-13
### Added