@@ -12,6 +12,17 @@
 - webgpu缓冲区大小调整
 - 设备管理可识别OrionTv
 
+### Security Fixed
+- 修复 eval() 代码执行漏洞（音乐 transform 功能）
+- 修复默认密码安全问题（数据库初始化）
+- 修复 Cron API 密码暴露问题（改用请求头传递）
+- 修复 dangerouslySetInnerHTML XSS 风险（HTML 过滤）
+
+### Breaking Changes
+- **Cron 任务调用方式变更**：密码不再通过 URL 路径传递，改为使用请求头 `Authorization: Bearer <password>` 或 `X-Cron-Password: <password>`
+- **CRON_PASSWORD 环境变量必填**：不再有默认值，必须设置才能使用 Cron 功能
+- **数据库初始化必填环境变量**：USERNAME 和 PASSWORD 环境变量必须设置，不再有默认值
+
 ### Fixed
 - 修复与upstash合并数据源时丢失的用户缓存信息
 - 修复登录页面不处理error参数
